--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@esm-bundle/chai": "^4.3.4-fix.0",
         "@open-wc/semantic-dom-diff": "^0.20.1",
+        "@types/mocha": "^10.0.6",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
         "@web/dev-server-esbuild": "^1.0.1",
@@ -25,8 +26,6 @@
         "prettier": "^3.2.4",
         "typescript": "^5.3.3",
         "typescript-lit-html-plugin": "^0.9.0"
-    },
-    "dependencies": {
     },
     "scripts": {
         "test:watch": "web-test-runner --config scripts/web-test-runner.config.mjs --watch",
