--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "bugs": {
         "url": "https://github.com/wntrblm/winterjs/issues"
     },
-    "homepage": "https://github.com/wntrblm/winterjs#readme"
+    "homepage": "https://github.com/wntrblm/winterjs#readme",
+    "dependencies": {
+        "lit": "^3.1.1"
+    }
 }
