--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@esm-bundle/chai": "^4.3.4-fix.0",
         "@open-wc/semantic-dom-diff": "^0.20.1",
+        "@open-wc/testing": "^3.0.0-next.5",
         "@types/mocha": "^10.0.6",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
