--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "esbuild-plugin-copy": "^2.1.1",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-lit": "^1.11.0",
         "eslint-plugin-mocha": "^10.2.0",
         "prettier": "^3.2.4",
         "typescript": "^5.3.3",
@@ -32,9 +33,9 @@
         "test:watch": "web-test-runner --config scripts/web-test-runner.config.mjs --watch",
         "test:coverage": "web-test-runner --config scripts/web-test-runner.config.mjs --coverage",
         "test": "web-test-runner --config scripts/web-test-runner.config.mjs",
-        "lint:eslint": "eslint --config .eslintrc.cjs src/ --ext .js,.ts",
+        "lint:eslint": "eslint",
         "lint:types": "tsc -p tsconfig.json",
-        "lint:prettier": "prettier . --check",
+        "lint:prettier": "prettier src tests --check",
         "lint": "npm run lint:eslint && npm run lint:types && npm run lint:prettier",
         "format": "prettier . --write",
         "serve": "node scripts/serve.js",
@@ -53,6 +54,7 @@
     },
     "homepage": "https://github.com/wntrblm/winterjs#readme",
     "dependencies": {
+        "eslint-plugin-wc": "^2.0.4",
         "lit": "^3.1.1"
     }
 }
