--- a/.prettierrc
+++ b/.prettierrc
@@ -21,7 +21,8 @@
         {
             "files": ["*.html"],
             "options": {
-                "tabWidth": 2
+                "tabWidth": 2,
+                "htmlWhitespaceSensitivity": "ignore"
             }
         }
     ]
