--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-lit": "^1.11.0",
         "eslint-plugin-mocha": "^10.2.0",
         "prettier": "^3.2.4",
+        "prettier-plugin-jinja-template": "^1.3.2",
         "typescript": "^5.3.3",
         "typescript-lit-html-plugin": "^0.9.0"
     },
