--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,8 +26,7 @@
         "editor.formatOnSave": true,
     },
     "[markdown]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
+        "editor.formatOnSave": false,
     },
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
