--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 20.x
           cache: "npm"
-          cache-dependency-path: "client/package-lock.json"
+          cache-dependency-path: "package-lock.json"
       - run: npm ci
         working-directory: client
       - run: npm run lint:eslint
@@ -32,7 +32,7 @@ jobs:
         with:
           node-version: 20.x
           cache: "npm"
-          cache-dependency-path: "client/package-lock.json"
+          cache-dependency-path: "package-lock.json"
       - run: npm ci
         working-directory: client
       - run: npm run build
