--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-lit": "^1.11.0",
         "eslint-plugin-mocha": "^10.2.0",
-        "prettier": "^3.2.4",
+        "prettier": "^3.2.5",
         "prettier-plugin-jinja-template": "^1.3.2",
         "typescript": "^5.3.3",
         "typescript-lit-html-plugin": "^0.9.0"
@@ -36,9 +36,9 @@
         "test": "web-test-runner --config scripts/web-test-runner.config.mjs",
         "lint:eslint": "eslint",
         "lint:types": "tsc -p tsconfig.json",
-        "lint:prettier": "prettier src tests --check",
+        "lint:prettier": "prettier src/scripts src/styles src/wintersong/*.html scripts tests --check",
         "lint": "npm run lint:eslint && npm run lint:types && npm run lint:prettier",
-        "format": "prettier . --write",
+        "format": "prettier src/scripts src/styles src/wintersong/*.html scripts tests --write",
         "build:no-check": "node scripts/build.js",
         "build": "tsc -p tsconfig.json && node scripts/build.js",
         "watch": "node scripts/watch.js",
